# D0036D-Network

Laboration 2/doxygen/html/: annotated.html  class_main-members.html  class_main.html  classcontroller_1_1_information-members.html  classcontroller_1_1_information.html  classmodel_1_1data_1_1_location-members.html  classmodel_1_1data_1_1_location.html  classmodel_1_1data_1_1_weather-members.html  classmodel_1_1data_1_1_weather.html  classmodel_1_1utils_1_1_http_utility.html  classmodel_1_1utils_1_1_time_format-members.html  classmodel_1_1utils_1_1_x_m_l_parser-members.html  classmodel_1_1utils_1_1_x_m_l_parser.html  classmodel_1_1xml_1_1_file_manager.html  (+3 more)
Laboration 2/src/: Main.java
Laboration 3 - Client/src/: Main.java
Laboration 3 - Server/src/: Main.java
Laboration 4/: CMakeCache.txt  README.md  authors.txt
Laboration 4 - Client/projects/Client/: CMakeLists.txt
Laboration 4 - Client/projects/Client/code/: Application.cpp  Application.h  CProtocol.h  Color.h  Layout.h  Serializer.cpp  Serializer.h  Server.cpp  Vector2.h  Vector2D.h  WinsockClient.cpp  WinsockClient.h
Laboration 4 - Server/: CMakeLists.txt  CProtocol.h  Laboration 4 - Server.vcxproj  SimpleServer.cpp  SimpleServer.h  main.cpp
Laboration 4 - Server/Laboration 4 - Server/: Laboration_4_Server.sln  SimpleServer.h
Laboration 4 - Server/projects/Server/: CMakeLists.txt
Laboration 4 - Server/projects/Server/code/: Application.cpp  Application.h  ClientSocket.cpp  ClientSocket.h  Input.cpp  Input.h  Listener.cpp  Listener.h  Server.cpp  WinsockServer.cpp  WinsockServer.h
(+126 files in other folders)
